Fix text alignment issue.

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2643,6 +2643,7 @@ header nav[aria-expanded='true'] .nav-tools #search-box .search-input {
   .section#cscards .cards .benefit-cards .cards-card-body p {
     font-size: var(--body-font-size-xxs);
     line-height: 1.3;
+    text-align: left;
     color: var(--gray-700);
     margin: 0;
     width: 100%;
